==========================
Change History for ZConfig
==========================

ZConfig 2.6.1 (2008/12/05)
--------------------------

- Fixed compatibility bug with Python 2.5.0.

- No longer trigger deprecation warnings under Python 2.6.


ZConfig 2.6.0 (2008/09/03)
--------------------------

- Added support for file rotation by time by specifying when and
  interval, rather than max-size, for log files. 

- Removed dependency on setuptools from the setup.py.


ZConfig 2.5.1 (2007/12/24)
--------------------------

- Made it possible to run unit tests via 'python setup.py test' (requires
  setuptools on sys.path).

- Added better error messages to test failure assertions.

ZConfig 2.5 (31 Aug 2007)
-------------------------

  *A note on the version number:*

  Information discovered in the revision control system suggests that
  some past revision has been called "2.4", though it is not clear that
  any actual release was made with that version number.  We're going to
  skip revision 2.4 entirely to avoid potential issues with anyone using
  something claiming to be ZConfig 2.4, and go straight to version 2.5.

- Add support for importing schema components from ZIP archives (including
  eggs).

- Added a 'formatter' configuration option in the logging handler sections
  to allow specifying a constructor for the formatter.

- Documented the package: URL scheme that can be used in extending schema.

- Added support for reopening all log files opened via configurations using
  the ZConfig.components.logger package.  For Zope, this is usable via the
  ``zc.signalhandler`` package.  ``zc.signalhandler`` is not required for
  ZConfig.

- Added support for rotating log files internally by size.

- Added a minimal implementation of schema-less parsing; this is mostly
  intended for applications that want to read several fragments of ZConfig
  configuration files and assemble a combined configuration.  Used in some
  ``zc.buildout`` recipes.
